# od-tools

./: .gitignore  .gitmodules  README.md  annotation_classes.py  colors.json  default_settings.json  main.py  mung_to_yolo.py  pyproject.toml  requirements.txt  resize_images.py  results.md  utils.py
app/: Download.py  Utils.py  __main__.py
app/Conversions/: BatchProcessor.py  BoundingBox.py  ConversionUtils.py  DataSaving.py  Formats.py  Formatter.py  IBoundingBox.py  MungToCOCO.py
app/Inference/: InferenceJob.py  ModelType.py  RunJob.py  SplitSettings.py  __init__.py
app/Linearize/: __init__.py  lmx_to_musicxml.py
app/Reconstruction/: DebugViz.py  GraphNodeTags.py  MeasureManipulation.py  MeasureRefactoring.py  Node.py  NoteManipulation.py  PageReconstruction.py  Preprocessing.py  VizUtils.py  __init__.py  __main__.py
app/Splitting/: 30d6c780-c8fe-11e7-9c14-005056827e51_375c6850-f593-11e7-b30f-5ef3fc9ae867.jpg.xml  Interfaces.py  SplitUtils.py  demo.py
app/Stats/: Bins.py  Plots.py  StatJob.py  StdDevs.py
app/Val/: COCOEvaluator.py  EvalJob.py  FScores.py  Utils.py
app/data/: default_config.json  default_settings.json
configs/: README.md  default.config  default.json  notes-accidentals.json  notes.json
datasetup/mung2ola/: README.md
demo/: __main__.py  demo.py
odtools/: Download.py  Utils.py  __init__.py  __main__.py
odtools/Conversions/: BatchProcessor.py  BoundingBox.py  Formatter.py  IBoundingBox.py  __init__.py
odtools/Inference/: RunJob.py  __init__.py  (+1 more)
stalix/: MeasureRefactoring.py  __init__.py
val/: FScores.py  Utils.py  __main__.py
(+52 files in other folders)
